# holo_imc

./: CMakeLists.txt  CMakeLists.txt~  holo.vcxproj  holo.vcxproj.filters  lo_results.txt
include/: AliasSampler.h  AverageCosineData.h  CWDParticle1D.h  CWDParticle1D.h~  ConstFixedSource.h  Controller.h  Controller.h~  CurrentElementTally.h  CurrentFaceTally.h  DataTransfer.h  DirichletBC1D.h  Dof.h  ECMCElement.h  ECMCElement.h~  ECMCElement1D.h  ECMCElement1D.h~  ECMCTally.h  Element.h  Element1D.h  ElementTally.h  ExactSolution.h  FEMUtilities.h  FaceTally.h  FixedSourceFunctor.h  FluxElementTally.h  FluxFaceTally.h  GlobalConstants.h  GlobalConstants.h~  HoLoSolver.h  HoLoSolver.h~  HoMesh.h  HoSolver.h  HoSolver.h~  LinDiscSource.h  LoData1D.h  LoSolver.h  LoSolver1D.h  LoSolver1DEigen.h  LoSolver1DEigen.h~  MMSFixedSource.h  (+20 more)
src/: AliasSampler.cpp  CWDParticle1D.cpp  CWDParticle1D.cpp~  ConstFixedSource.cpp  CurrentElementTally.cpp  CurrentFaceTally.cpp  DataTransfer.cpp  DataTransfer.cpp~  DirichletBC1D.cpp  Dof.cpp  ECMCElement.cpp  ECMCElement1D.cpp  ECMCElement1D.cpp~  ECMCTally.cpp  Element.cpp  Element1D.cpp  ElementTally.cpp  ExactSolution.cpp  FEMUtilties.cpp  FaceTally.cpp  FixedSourceFunctor.cpp  FluxElementTally.cpp  FluxFaceTally.cpp  HoLoSolver.cpp  HoLoSolver.cpp~  HoMesh.cpp  HoMesh.cpp~  HoSolver.cpp  HoSolver.cpp~  LinDiscSource.cpp  LoData1D.cpp  LoSolver.cpp  LoSolver1D.cpp  LoSolver1DEigen.cpp  LoSolver1DEigen.cpp~  MMSFixedSource.cpp  MaterialConstant.cpp  Mesh.cpp  MeshController.cpp  MeshController.cpp~  (+18 more)
